Terraform/V1-EC2.tf
provider "aws" {
   region = "us-east-1"  
}

resource "aws_instance" "demo-server" {
  ami = "ami-053b0d53c279acc90"
  instance_type = "t2.micro"
  key_name = "linux-KP"
}
